add link in footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" type="text/css" href="sources/styles/app.css">-->
 </head>
 <body>
-    
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script type="text/javascript" src="modules/list.js"></script>
     <script type="text/javascript" src="modules/datatable.js"></script>
@@ -96,9 +95,8 @@
             ]
         }
 
-        //$$.html('<a href="http://webix.com">http://webix.com</a>')
         let footer = { 
-            template: "The software is provided by . All rights reserved (c)",
+            template: "The software is provided by <a href='https://webix.com'>https://webix.com</a>. All rights reserved (c)",
             autoheight: true
 		}
 
