fix scroll in datatable

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 { id:"category", header:"Category", fillspace:1}
             ],
             data: small_film_set,
-            gravity: 3
+            gravity: 3, 
+            scroll: "y"
         }
         
         let edit_films = {
