add popup on profile button click

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 </head>
 <body>
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="user-interaction.js"></script>
 </body>
 </html>
