--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script type="text/javascript" src="data/list.js"></script>
     <script type="text/javascript" src="data/datatable.js"></script>
+    <script type="text/javascript" src="scripts/parseEdit.js"></script>
+    <script type="text/javascript" src="scripts/validation.js"></script>
 </head>
 <body>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
