--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" type="text/css" href="http://cdn.webix.com/edge/webix.css">
 
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <script type="text/javascript" src="data/list.js"></script>
-    <script type="text/javascript" src="data/datatable.js"></script>
+    <script type="text/javascript" src="data/sideMenu.js"></script>
     <script type="text/javascript" src="scripts/parseEdit.js"></script>
     <script type="text/javascript" src="scripts/validation.js"></script>
 </head>
