--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="scripts/parseEdit.js"></script>
     <script type="text/javascript" src="scripts/validation.js"></script>
     <script type="text/javascript" src="views/usersView.js"></script>
+    <script type="text/javascript" src="views/productsView.js"></script>
 </head>
 <body>
     <script type="text/javascript" src="views/main.js"></script>
