--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="http://cdn.webix.com/edge/webix.css">
 
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <script type="text/javascript" src="data/multiviewId.js"></script>
     <script type="text/javascript" src="data/sideMenu.js"></script>
     <script type="text/javascript" src="scripts/highlightText.js"></script>
     <script type="text/javascript" src="scripts/parseEdit.js"></script>
