--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script type="text/javascript" src="data/multiviewId.js"></script>
     <script type="text/javascript" src="data/sideMenu.js"></script>
+    <script type="text/javascript" src="data/filmsTabbar.js"></script>
     <script type="text/javascript" src="scripts/highlightText.js"></script>
     <script type="text/javascript" src="scripts/parseEdit.js"></script>
     <script type="text/javascript" src="scripts/validation.js"></script>
