--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <script type="text/javascript" src="data/filmsTabbar.js"></script>
     <script type="text/javascript" src="data/countries.js"></script>
 
-    <script type="text/javascript" src="scripts/highlightText.js"></script>
     <script type="text/javascript" src="scripts/parseEdit.js"></script>
     <script type="text/javascript" src="scripts/validation.js"></script>
+    <script type="text/javascript" src="scripts/randomNumber.js"></script>
+    <script type="text/javascript" src="scripts/highlightText.js"></script>
 
     <script type="text/javascript" src="views/dashboardView.js"></script>
     <script type="text/javascript" src="views/usersView.js"></script>
