--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <script type="text/javascript" src="data/sideMenu.js"></script>
     <script type="text/javascript" src="data/filmsTabbar.js"></script>
     <script type="text/javascript" src="data/countries.js"></script>
+    <script type="text/javascript" src="data/categories.js"></script>
 
-    <script type="text/javascript" src="scripts/parseEdit.js"></script>
-    <script type="text/javascript" src="scripts/validation.js"></script>
-    <script type="text/javascript" src="scripts/randomNumber.js"></script>
-    <script type="text/javascript" src="scripts/highlightText.js"></script>
+    <script type="text/javascript" src="scripts/viewHelper.js"></script>
+    <script type="text/javascript" src="scripts/common.js"></script>
 
     <script type="text/javascript" src="views/dashboardView.js"></script>
     <script type="text/javascript" src="views/usersView.js"></script>
