add and sync collections, add admin view

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="views/dashboardView.js"></script>
     <script type="text/javascript" src="views/usersView.js"></script>
     <script type="text/javascript" src="views/productsView.js"></script>
+    <script type="text/javascript" src="views/adminView.js"></script>
 </head>
 <body>
     <script type="text/javascript" src="views/main.js"></script>
